bindings/c/whiteout_mdx.h

/* ── Opaque handles ───────────────────────────────────────── */

typedef struct whiteout_MdxExtent whiteout_MdxExtent;
/* ── MdxExtent ─────────────────────────────────────────────── */

whiteout_MdxExtent* whiteout_mdx_MdxExtent_new(void);
void whiteout_mdx_MdxExtent_delete(whiteout_MdxExtent* self);
float whiteout_mdx_MdxExtent_get_boundsRadius(const whiteout_MdxExtent* self);
void whiteout_mdx_MdxExtent_set_boundsRadius(whiteout_MdxExtent* self, float value);
whiteout_Vector3f* whiteout_mdx_MdxExtent_get_minimum(whiteout_MdxExtent* self);
void whiteout_mdx_MdxExtent_set_minimum(whiteout_MdxExtent* self, const whiteout_Vector3f* value);
whiteout_Vector3f* whiteout_mdx_MdxExtent_get_maximum(whiteout_MdxExtent* self);
void whiteout_mdx_MdxExtent_set_maximum(whiteout_MdxExtent* self, const whiteout_Vector3f* value);